// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Game Machine should allow players to join, start the game, and perform various actions 1`] = `
{
  "auction": null,
  "commodityMarket": {
    "commodities": {
      "coal": {
        "config": {
          "baseExchangeRate": 10,
          "maxExchangeRate": 30,
          "minExchangeRate": 5,
          "priceIncrement": 0.2,
          "tradingFee": 0.3,
          "unitSize": 10,
        },
        "currentExchangeRate": 10.4,
      },
      "gas": {
        "config": {
          "baseExchangeRate": 15,
          "maxExchangeRate": 40,
          "minExchangeRate": 8,
          "priceIncrement": 0.25,
          "tradingFee": 0.3,
          "unitSize": 8,
        },
        "currentExchangeRate": 15,
      },
      "oil": {
        "config": {
          "baseExchangeRate": 20,
          "maxExchangeRate": 50,
          "minExchangeRate": 10,
          "priceIncrement": 0.3,
          "tradingFee": 0.3,
          "unitSize": 5,
        },
        "currentExchangeRate": 20,
      },
      "uranium": {
        "config": {
          "baseExchangeRate": 50,
          "maxExchangeRate": 100,
          "minExchangeRate": 25,
          "priceIncrement": 0.5,
          "tradingFee": 0.3,
          "unitSize": 1,
        },
        "currentExchangeRate": 50,
      },
    },
  },
  "entitiesById": {
    "ENTITY_ID_0": {
      "blueprint": {
        "allowedPosition": "corner",
        "components": {
          "connections": {
            "connectedToIds": [],
            "energyDistributedLastTickKwh": 0,
          },
          "renderable": {
            "renderableComponentName": "PowerPole",
          },
        },
        "name": "Power pole",
      },
      "id": "ENTITY_ID_0",
      "name": "Power pole blueprint",
      "owner": {
        "playerId": "player-1",
      },
    },
    "ENTITY_ID_1": {
      "auctionable": {
        "startingPrice": 10,
      },
      "blueprint": {
        "allowedPosition": "hex",
        "components": {
          "fuelRequirement": {
            "fuelConsumptionPerKWh": 0.1,
            "fuelType": "coal",
          },
          "fuelStorage": {
            "currentFuelStorage": 0,
            "fuelType": "coal",
            "maxFuelStorage": 1000,
          },
          "powerGeneration": {
            "energyGeneratedLastTickKwh": 0,
            "powerGenerationKW": 1000,
            "pricePerKWh": 0.1,
          },
          "renderable": {
            "renderableComponentName": "PowerPlant",
          },
          "requiredRegion": undefined,
        },
        "name": "Starter Coal Plant",
      },
      "id": "ENTITY_ID_1",
      "name": "Starter Coal Plant blueprint",
      "owner": {
        "playerId": "player-1",
      },
    },
    "ENTITY_ID_2": {
      "blueprint": {
        "allowedPosition": "corner",
        "components": {
          "connections": {
            "connectedToIds": [],
            "energyDistributedLastTickKwh": 0,
          },
          "renderable": {
            "renderableComponentName": "PowerPole",
          },
        },
        "name": "Power pole",
      },
      "id": "ENTITY_ID_2",
      "name": "Power pole blueprint",
      "owner": {
        "playerId": "player-2",
      },
    },
    "ENTITY_ID_3": {
      "auctionable": {
        "startingPrice": 10,
      },
      "blueprint": {
        "allowedPosition": "hex",
        "components": {
          "fuelRequirement": {
            "fuelConsumptionPerKWh": 0.1,
            "fuelType": "coal",
          },
          "fuelStorage": {
            "currentFuelStorage": 0,
            "fuelType": "coal",
            "maxFuelStorage": 1000,
          },
          "powerGeneration": {
            "energyGeneratedLastTickKwh": 0,
            "powerGenerationKW": 1000,
            "pricePerKWh": 0.1,
          },
          "renderable": {
            "renderableComponentName": "PowerPlant",
          },
          "requiredRegion": undefined,
        },
        "name": "Starter Coal Plant",
      },
      "id": "ENTITY_ID_3",
      "name": "Starter Coal Plant blueprint",
      "owner": {
        "playerId": "player-2",
      },
    },
    "ENTITY_ID_4": {
      "connections": undefined,
      "fuelRequirement": {
        "fuelConsumptionPerKWh": 0.1,
        "fuelType": "coal",
      },
      "fuelStorage": {
        "currentFuelStorage": 10,
        "fuelType": "coal",
        "maxFuelStorage": 1000,
      },
      "hexPosition": {
        "coordinates": {
          "x": 3,
          "z": 11,
        },
      },
      "id": "ENTITY_ID_4",
      "name": "Starter Coal Plant",
      "owner": {
        "playerId": "player-1",
      },
      "powerGeneration": {
        "energyGeneratedLastTickKwh": 0,
        "powerGenerationKW": 1000,
        "pricePerKWh": 0.1,
      },
      "renderable": {
        "renderableComponentName": "PowerPlant",
      },
      "requiredRegion": undefined,
    },
    "ENTITY_ID_5": {
      "connections": undefined,
      "fuelRequirement": {
        "fuelConsumptionPerKWh": 0.1,
        "fuelType": "coal",
      },
      "fuelStorage": {
        "currentFuelStorage": 10,
        "fuelType": "coal",
        "maxFuelStorage": 1000,
      },
      "hexPosition": {
        "coordinates": {
          "x": 4,
          "z": 14,
        },
      },
      "id": "ENTITY_ID_5",
      "name": "Starter Coal Plant",
      "owner": {
        "playerId": "player-2",
      },
      "powerGeneration": {
        "energyGeneratedLastTickKwh": 0,
        "powerGenerationKW": 1000,
        "pricePerKWh": 0.1,
      },
      "renderable": {
        "renderableComponentName": "PowerPlant",
      },
      "requiredRegion": undefined,
    },
    "ENTITY_ID_6": {
      "connections": {
        "connectedToIds": [],
        "energyDistributedLastTickKwh": 0,
      },
      "cornerPosition": {
        "cornerCoordinates": {
          "hex": {
            "x": 3,
            "z": 11,
          },
          "position": 0,
        },
      },
      "id": "ENTITY_ID_6",
      "name": "Power pole",
      "owner": {
        "playerId": "player-1",
      },
      "renderable": {
        "renderableComponentName": "PowerPole",
      },
    },
    "ENTITY_ID_7": {
      "connections": {
        "connectedToIds": [
          "ENTITY_ID_6",
        ],
        "energyDistributedLastTickKwh": 0,
      },
      "cornerPosition": {
        "cornerCoordinates": {
          "hex": {
            "x": 4,
            "z": 10,
          },
          "position": 1,
        },
      },
      "id": "ENTITY_ID_7",
      "name": "Power pole",
      "owner": {
        "playerId": "player-1",
      },
      "renderable": {
        "renderableComponentName": "PowerPole",
      },
    },
  },
  "id": "test-game",
  "players": {
    "player-1": {
      "color": "#46C9CD",
      "id": "player-1",
      "isHost": true,
      "money": 81.42,
      "name": "Player 1",
      "number": 1,
      "powerSoldKWh": 0,
    },
    "player-2": {
      "color": "#67CA76",
      "id": "player-2",
      "isHost": false,
      "money": 86.48,
      "name": "Player 2",
      "number": 2,
      "powerSoldKWh": 0,
    },
  },
  "randomSeed": 12345,
  "time": {
    "isPaused": true,
    "totalTicks": 5,
  },
}
`;

exports[`Game Machine should allow players to join, start the game, and perform various actions 2`] = `
{
  "entitiesById": {
    "ENTITY_ID_0": {
      "hexPosition": {
        "coordinates": {
          "x": 3,
          "z": 11,
        },
      },
      "id": "ENTITY_ID_0",
      "name": "Survey for 3,11",
      "owner": {
        "playerId": "player-1",
      },
      "surveyResult": {
        "isComplete": true,
        "resource": undefined,
        "surveyStartTick": 0,
      },
    },
  },
}
`;

exports[`Game Machine should allow players to join, start the game, and perform various actions 3`] = `
{
  "entitiesById": {
    "ENTITY_ID_0": {
      "hexPosition": {
        "coordinates": {
          "x": 4,
          "z": 14,
        },
      },
      "id": "ENTITY_ID_0",
      "name": "Survey for 4,14",
      "owner": {
        "playerId": "player-2",
      },
      "surveyResult": {
        "isComplete": true,
        "resource": undefined,
        "surveyStartTick": 0,
      },
    },
  },
}
`;
